Fix word-break on language column of Events Collection.

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp2/rhd-frontend/src/styles/rhd-theme/components/_events-collection.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp2/rhd-frontend/src/styles/rhd-theme/components/_events-collection.scss
@@ -5,6 +5,9 @@
   .pf-c-table__expandable-row {
     display: none;
   }
+  .rhd-c-table .event-session-field__language {
+    word-break: normal;
+  }
 
   @media screen and (max-width: 768px) and (min-width: 320px) {
     .rhd-c-table .rhd-m-register {
